--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.1",
     "body-parser": "^1.18.2",
+    "chalk": "^2.4.1",
     "express": "^4.16.2",
     "forge-apis": "^0.4.1",
+    "guid": "0.0.12",
     "multer": "^1.3.0"
   }
 }
